karaage_asserts/tests/codes/fail.rs
use karaage_asserts::*;

struct Empty {}

fn main() {
    assert_data_traits::<Empty>();
}
